kubernetes/gateway-runtime/envoy/envoy-config.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  clusters:
    - name: ext_authz-grpc-service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_authz-grpc-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 9001
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 20s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ratelimit
                      port_value: 8081
      "transport_socket":
        "name": "envoy.transport_sockets.tls"
        "typed_config":
          "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
          "common_tls_context":
            "tls_params":
                "tls_minimum_protocol_version": "TLSv1_2"
                "tls_maximum_protocol_version": "TLSv1_2"
            "tls_certificates":
              - "certificate_chain":
                  "filename": "/etc/cc/security/keystore/mg.pem"
                "private_key":
                  "filename": "/etc/cc/security/keystore/mg.key"
            "validation_context":
              "match_subject_alt_names":
                - "exact": "localhost"
              "trusted_ca":
                "filename": "/etc/cc/security/keystore/mg.pem"
    - name: clusterProd_cc-envoy_SMS2.0.0
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_SMS2.0.0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_cc-envoy_PizzaShack1.0.0
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_PizzaShack1.0.0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_cc-envoy_Hotels2.1.0
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_Hotels2.1.0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_cc-envoy_Weather1.1.0
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_Weather1.1.0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_cc-envoy_Pets3.1.0
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_Pets3.1.0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_cc-envoy_PerfAPI2.1.1
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_cc-envoy_PerfAPI2.1.1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999
    - name: clusterProd_non-ratelimit_NoRateLimitActions1.1.1
      connect_timeout: 20s
      dns_refresh_rate: 5s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: clusterProd_non-ratelimit_NoRateLimitActions1.1.1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-backend
                      port_value: 9999


########################################################################## Generated Clusters ##########################################################################
########################################################################## Generated Clusters ##########################################################################


  listeners:
    - name: HTTPSListener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    filename: "/etc/cc/security/keystore/mg.pem"
                  private_key:
                    filename: "/etc/cc/security/keystore/mg.key"
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress-https
                use_remote_address: false
                stream_idle_timeout: 300s
                request_timeout: 0s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config: {}
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext_authz-grpc-service
                        timeout: 0.250s
                      transport_api_version: V3
                      include_peer_certificate: true
                      clear_route_cache: true
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: default
                      request_type: external
                      stage: 0
                      rate_limited_as_resource_exhausted: false
                      failure_mode_deny: false
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                        transport_api_version: V3
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                      inline_code: "function envoy_on_request(request_handle)\nend\nfunction envoy_on_response(response_handle)\nend"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: true
                route_config:
                  name: route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "cc-envoy"
                        - "cc-envoy:*"
                      request_headers_to_remove:
                        - x-cluster-header
                        - x-ratelimit-api-policy
                        - x-ratelimit-application
                        - x-ratelimit-application-policy
                        - x-ratelimit-subscription
                        - x-ratelimit-subscription-policy
                      rate_limits:
                        - actions:
                            - generic_key:
                                descriptor_key: "org"
                                descriptor_value: "John"
                            - request_headers:
                                descriptor_key: "application"
                                header_name: "x-ratelimit-application"
                            - request_headers:
                                descriptor_key: "policy"
                                header_name: "x-ratelimit-application-policy"
                        - actions:
                            - generic_key:
                                descriptor_key: "org"
                                descriptor_value: "John"
                            - request_headers:
                                descriptor_key: "subscription"
                                header_name: "x-ratelimit-subscription"
                            - request_headers:
                                descriptor_key: "policy"
                                header_name: "x-ratelimit-subscription-policy"
                            - generic_key:
                                descriptor_key: "spike"
                                descriptor_value: "true"
                        - actions:
                            - generic_key:
                                descriptor_key: "org"
                                descriptor_value: "John"
                            - request_headers:
                                descriptor_key: "subscription"
                                header_name: "x-ratelimit-subscription"
                            - request_headers:
                                descriptor_key: "policy"
                                header_name: "x-ratelimit-subscription-policy"
                      routes:
                      # Health
                        - name: health
                          match:
                            path: /health
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"statue": "healthy"}'
                          decorator:
                            operation: "/health"
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              disabled: true
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits
                      # Ready
                        - name: ready
                          match:
                            path: /ready
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"statue": "ready"}'
                          decorator:
                            operation: "/ready"
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              disabled: true
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits
                      # API: SMS
                        - name: sms
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/sms/2.0.0/text[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^POST|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/sms/2.0.0/text[/]{0,1}"
                              substitution: "/api/v2/text"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/sms/2.0.0"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "1500PerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/sms/2.0.0/text[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/sms/2.0.0"
                                  method: "POST"
                                  name: "SMS" # API Name
                                  path: "/sms/2.0.0/text"
                                  prodClusterName: "clusterProd_cc-envoy_SMS2.0.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "2.0.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                      # API: PizzaShack
                        - name: PizzaShack
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/pizzashack/1.0.0/menu[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/pizzashack/1.0.0/menu[/]{0,1}"
                              substitution: "/pizzashack/v2/menu"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/pizzashack/1.0.0"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "20KPerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/pizzashack/1.0.0/menu[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/pizzashack/1.0.0"
                                  method: "GET"
                                  name: "PizzaShack" # API Name
                                  path: "/pizzashack/1.0.0/menu"
                                  prodClusterName: "clusterProd_cc-envoy_PizzaShack1.0.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "1.0.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                        - name: PizzaShack
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/pizzashack/1.0.0/order/([^/]+)[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|PUT|DELETE|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/pizzashack/1.0.0/order/([^/]+)[/]{0,1}"
                              substitution: "/pizzashack/v2/order/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/pizzashack/1.0.0"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "20KPerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/pizzashack/1.0.0/order/([^/]+)[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/pizzashack/1.0.0"
                                  method: "GET PUT DELETE"
                                  name: "PizzaShack" # API Name
                                  path: "/pizzashack/1.0.0/order/{id}"
                                  prodClusterName: "clusterProd_cc-envoy_PizzaShack1.0.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "1.0.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                      # API: Hotels
                        - name: Hotels
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/hotels/2.1.0/hotels[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/hotels/2.1.0/hotels[/]{0,1}"
                              substitution: "/hotels/v2/hotels"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/hotels/2.1.0/hotels"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "18000PerHour"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/hotels/2.1.0/hotels[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/hotels/2.1.0"
                                  method: "GET"
                                  name: "Hotels" # API Name
                                  path: "/hotels/2.1.0/hotels"
                                  prodClusterName: "clusterProd_cc-envoy_Hotels2.1.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "2.1.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                        - name: Hotels
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/hotels/2.1.0/hotels/([^/]+)/rate[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|PUT|DELETE|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/hotels/2.1.0/hotels/([^/]+)/rate[/]{0,1}"
                              substitution: "/hotels/2.1.0/hotels/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/hotels/2.1.0/hotels/{Id}/rate"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "500PerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/hotels/2.1.0/hotels/([^/]+)/rate[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/hotels/2.1.0"
                                  method: "GET PUT DELETE"
                                  name: "Hotels" # API Name
                                  path: "/hotels/2.1.0/hotels/{Id}/rate"
                                  prodClusterName: "clusterProd_cc-envoy_Hotels2.1.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "1.0.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                      # API: Weather
                        - name: Weather
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/weather/1.1.0/country/([^/]+)[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|POST|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/weather/1.1.0/country/([^/]+)[/]{0,1}"
                              substitution: "/weather/1.1.0/country/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/weather/1.1.0/country/{Id}"
                                  - request_headers:
                                      descriptor_key: "method"
                                      header_name: ":method" # Special change here for HTTP method
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "600PerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/weather/1.1.0/country/([^/]+)[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/weather/1.1.0"
                                  method: "GET POST"
                                  name: "Weather" # API Name
                                  path: "/weather/1.1.0/country/{id}"
                                  prodClusterName: "clusterProd_cc-envoy_Weather1.1.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "1.1.0"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                      # API: Pets
                        - name: Pets
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/pets/3.1.0/pets[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/pets/3.1.0/pets[/]{0,1}"
                              substitution: "/pets/api/v3/pets"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                          decorator:
                            operation: "cc-envoy:^/pets/3.1.0/pets[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/pets/3.1.0"
                                  method: "GET"
                                  name: "Pets" # API Name
                                  path: "/pets/3.1.0/pets"
                                  prodClusterName: "clusterProd_cc-envoy_Pets3.1.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "3.1.0"
                                disable_request_body_buffering: true
                        - name: Pets
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/pets/3.1.0/pets/([^/]+)[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/pets/3.1.0/pets/([^/]+)[/]{0,1}"
                              substitution: "/pets/v3/pets/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                          decorator:
                            operation: "cc-envoy:^/pets/3.1.0/pets/([^/]+)[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/pets/3.1.0"
                                  method: "GET"
                                  name: "Pets" # API Name
                                  path: "/pets/3.1.0/pets/{Id}"
                                  prodClusterName: "clusterProd_cc-envoy_Pets3.1.0" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "3.1.0"
                                disable_request_body_buffering: true
                      # API: PerfAPI
                        - name: PerfAPI
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/perfapi/2.1.1/perf[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/perfapi/2.1.1/perf[/]{0,1}"
                              substitution: "/perf/api/v3/perf"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/perfapi/2.1.1"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "5MPerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/perfapi/2.1.1/perf[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/perfapi/2.1.1"
                                  method: "GET"
                                  name: "PerfAPI" # API Name
                                  path: "/perfapi/2.1.1/perf"
                                  prodClusterName: "clusterProd_cc-envoy_PerfAPI2.1.1" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "2.1.1"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                        - name: PerfAPI
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/perfapi/2.1.1/perf/([^/]+)[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/perfapi/2.1.1/perf/([^/]+)[/]{0,1}"
                              substitution: "/perf/v3/perf/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "org"
                                      descriptor_value: "John"
                                  - generic_key:
                                      descriptor_key: "vhost"
                                      descriptor_value: "cc-envoy"
                                  - generic_key:
                                      descriptor_key: "resource"
                                      descriptor_value: "/perfapi/2.1.1"
                                  - generic_key:
                                      descriptor_key: "method"
                                      descriptor_value: "ALL"
                                  - generic_key:
                                      descriptor_key: "policy"
                                      descriptor_value: "5MPerMin"
                                  - request_headers:
                                      descriptor_key: "condition"
                                      header_name: "x-ratelimit-api-policy"
                          decorator:
                            operation: "cc-envoy:^/perfapi/2.1.1/perf/([^/]+)[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/perfapi/2.1.1"
                                  method: "GET"
                                  name: "PerfAPI" # API Name
                                  path: "/perfapi/2.1.1/perf"
                                  prodClusterName: "clusterProd_cc-envoy_PerfAPI2.1.1" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "cc-envoy"
                                  version: "2.1.1"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: INCLUDE
                      # API: NoRateLimitActions
                        - name: NoRateLimitActions
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/nonratelimitactions/1.1.1/non[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/nonratelimitactions/1.1.1/non[/]{0,1}"
                              substitution: "/nonratelimit/api/v3/non"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                          decorator:
                            operation: "non-ratelimit:^/nonratelimitactions/1.1.1/non[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/nonratelimitactions/1.1.1"
                                  method: "GET"
                                  name: "PeNoRateLimitActionsts" # API Name
                                  path: "/nonratelimitactions/1.1.1/non"
                                  prodClusterName: "clusterProd_non-ratelimit_NoRateLimitActions1.1.1" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "non-ratelimit"
                                  version: "1.1.1"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits
                        - name: NonRateLimit
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/nonratelimitactions/1.1.1/non/([^/]+)[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/nonratelimitactions/1.1.1/non/([^/]+)[/]{0,1}"
                              substitution: "/nonratelimitactions/v3/non/\\1"
                            timeout: 60s
                            idle_timeout: 300s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: false
                            cors:
                              allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                              allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                              allow_credentials: false
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: ".*"
                          decorator:
                            operation: "non-ratelimit:^/nonratelimitactions/1.1.1/non/([^/]+)[/]{0,1}"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              check_settings:
                                context_extensions:
                                  basePath: "/nonratelimitactions/1.1.1"
                                  method: "GET"
                                  name: "PeNoRateLimitActionsts" # API Name
                                  path: "/nonratelimitactions/1.1.1/non"
                                  prodClusterName: "clusterProd_non-ratelimit_NoRateLimitActions1.1.1" # Cluster Name
                                  sandClusterName: ""
                                  vHost: "non-ratelimit"
                                  version: "1.1.1"
                                disable_request_body_buffering: true
                            envoy.filters.http.ratelimit:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
                              vh_rate_limits: IGNORE # Ignore Vhost rate limits

########################################################################## Generated Routes ##########################################################################
########################################################################## Generated Routes ##########################################################################
